<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">陌连</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登陆</string>
    <string name="regist">注册</string>
    <string name="tips_login">用户名/手机号</string>
    <string name="tips_login_pass">密码</string>
    <string name="forget_pass">忘记密码</string>
    <string name="regesit_phone_edit_text">输入手机号</string>
    <string name="regesit_phone_bt_next">下一步</string>
    <string name="regesit_phone_bt_send">发送</string>
    <string name="regesit_phone_edit_tips">输入验证码</string>
    <string name="recorder_recoding"> 松开结束</string>
    <string name="recorder_want_cancel">手指上滑，取消发送</string>
    <string name="recorder_want_release">松开手机，发送</string>
    <string name="recorder_normal">按住说话</string>
    <string name="recorder_too_early">时间过短</string>
    <string name="head_pic">头像</string>
    <string name="name">用户名</string>
    <string name="passwd">密码</string>
    <string name="conpasswd">密码确认</string>
    <string name="register">注册</string>
    <string name="birthday">生日：</string>
    <string name="gender">性别：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="dialog_head_camera">拍照</string>
    <string name="dialog_head_photo">相册</string>
    <string name="regesit_pass_usr_name">输入你要注册的用户名</string>
    <string name="regesit_pass_usr_passwd">输入注册的密码</string>
    <string name="regesit_pass_usr_enter">确认</string>
    <string name="consonvertion_text">聊天</string>
    <string name="own_setting">设置</string>
    <string name="friend_list">联系人</string>
    <string name="toast_error_headpicture_null">请设置头像！</string>
    <string name="toast_error_username_null">用户名不能为空！</string>
    <string name="toast_error_password_null">密码不能为空！</string>
    <string name="toast_error_comfirm_password_no_same">密码不一致！</string>
    <string name="toast_error_username_illegal">用户名只允许字母数字下划线，5至16个字符！</string>
    <string name="toast_error_password_too_short">密码不能少于6位！</string>
    <string name="toast_error_username_exit">用户名已经存在！</string>
    <string name="network_error_not_connected">当前网络不可用,请检查您的网络!</string>
    <string name="longclick_speak">长按说话</string>
    <string name="text_tips">聊起来～～～～</string>
    <string name="message_search_hint">搜索</string>
    <string name="set_myinfo">个人信息</string>
    <string name="set_notify">接受消息通知</string>
    <string name="set_lighting">通知时指示灯闪烁</string>
    <string name="set_sound">声音设置</string>
    <string name="exit_login">退出登陆</string>
    <string name="add_friend">添加好友</string>
    <string name="send_msg">发起对话</string>
    <string name="add_blacklist">加入黑名单</string>
    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="add_name_hint">请输入昵称&#8230;</string>
    <string name="add_gender">性别</string>
    <string name="blacklist">黑名单</string>
    <string name="chat">发起会话</string>
    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="logout">退出登陆</string>
    <string name="testtest">test</string>
    <string name="school_title_name">学院通知</string>
    <string name="back">返回</string>
    <string name="friend_chat_title">好友消息</string>
    <string name="send">发送</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="str_recorder_normal">按住说话</string>
    <string name="str_recorder_rcording">松开结束</string>
    <string name="str_recorder_want_cancel">松开取消发送</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_short_tips">录音时间太短</string>
	<string name="add_gametype">解密游戏</string>
	<string name="game2_tips_picture_name">请输入答案（建议1~4个字）</string>
    <string name="game2_tips_picture_pass">请输入提示（帮助他人猜测）</string>
    <string name="game2_dialog_bt_ok">上传</string>
    <string name="game2_dialog_bt_cancle">取消</string>
    <string name="game2_tips_picture_key">请输入你的猜测</string>
    <string name="game2_key_bt_ok">确认</string>
    <string name="game2_key_bt_cancle">返回</string>
    <string name="game2_key_error">猜错了呦~~~</string>
</resources>