<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/linealayout_bottom_color"
    android:orientation="vertical"
    tools:ignore="ObsoleteLayoutParam" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/black"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView_game2"
            android:layout_width="@dimen/x600"
            android:layout_height="@dimen/x800"
            android:layout_gravity="center"
            android:src="@drawable/head_wu"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <EditText
        android:id="@+id/pictrue_dialog_picturename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/game2_tips_picture_name" >
    </EditText>

    <EditText
        android:id="@+id/pictrue_dialog_pictureans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/game2_tips_picture_pass" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dialog_send_picture"
            android:layout_width="@dimen/x200"
            android:layout_height="@dimen/x140"
            android:layout_margin="@dimen/x40"
            android:background="@drawable/btn_selector"
            android:text="@string/game2_dialog_bt_ok"
            android:textSize="@dimen/x40"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/dialog_cancle"
            android:layout_width="@dimen/x200"
            android:layout_height="@dimen/x140"
            android:layout_margin="@dimen/x40"
            android:background="@drawable/btn_selector"
            android:text="@string/game2_dialog_bt_cancle"
            android:textSize="@dimen/x40"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>