<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical" >
	<include 
	    android:id="@+id/common_head"
	    layout="@layout/common_header"/>
    <RelativeLayout
        android:id="@+id/layout_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_top_bg"
        android:minHeight="80dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            style="@style/Angelbeats.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_avator" />

         <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_set_avator"
                style="@style/Angelbeats.ImageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="5dp"
                 />

            <ImageView
                android:id="@+id/iv_arraw"
                style="@style/Angelbeats.ImageView"
                android:layout_width="20dp"
                android:contentDescription="@string/action_settings"
                android:src="@drawable/register_bottom_arrow" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_nick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_mid_bg"
        android:padding="10dp" >

        <TextView
            style="@style/Angelbeats.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_nick" />
		<LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
            android:id="@+id/tv_set_nick"
            style="@style/Angelbeats.TextView._Black"
            android:layout_marginRight="20dp"
            android:drawablePadding="10dp" />

            <ImageView
                android:id="@+id/iv_nickarraw"
                style="@style/Angelbeats.ImageView"
                android:layout_width="20dp"
                android:contentDescription="@string/action_settings"
                android:src="@drawable/register_bottom_arrow" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_mid_bg"
        android:padding="10dp" >

        <TextView
            style="@style/Angelbeats.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_name" />

        <TextView
            android:id="@+id/tv_set_name"
            style="@style/Angelbeats.TextView._Black"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:drawablePadding="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_mid_bg"
        android:padding="10dp" >

        <TextView
            style="@style/Angelbeats.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_gender" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_set_gender"
                style="@style/Angelbeats.TextView._Black"
                android:layout_marginRight="20dp"
                android:drawablePadding="10dp" />
             <ImageView
                android:id="@+id/iv_genderarraw"
                style="@style/Angelbeats.ImageView"
                android:layout_width="20dp"
                android:contentDescription="@string/action_settings"
                android:src="@drawable/register_bottom_arrow" />
        </LinearLayout>
    </RelativeLayout>
     <RelativeLayout
        android:id="@+id/layout_gametype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_mid_bg"
        android:visibility="gone"
        android:padding="10dp" >

        <TextView
            style="@style/Angelbeats.TextView._Black"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_gametype" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_set_gametype"
                style="@style/Angelbeats.TextView._Black"
                android:layout_marginRight="20dp"
                android:drawablePadding="10dp" />
             <ImageView
                android:id="@+id/iv_gametypearraw"
                style="@style/Angelbeats.ImageView"
                android:layout_width="20dp"
                android:contentDescription="@string/action_settings"
                android:src="@drawable/register_bottom_arrow" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_add_friend"
        style="@style/Angelbeats.Button.theme"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/add_friend" />
     <Button
        android:id="@+id/btn_start_consonvertion"
        style="@style/Angelbeats.Button.theme"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/send_msg" 
        android:visibility="gone"/>

</LinearLayout>