<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/x400"
        android:gravity="center" >

        <angelbeats.com.view.RoundedImageView
            android:id="@+id/heade_login_view"
            android:layout_width="@dimen/x350"
            android:layout_height="@dimen/x350"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/x50"
            android:scaleType="center"
            android:src="@drawable/header_example"
            app:riv_border_color="@color/linealayout_bottom_color"
            app:riv_border_width="@dimen/x6"
            app:riv_corner_radius="150dip"
            app:riv_oval="false" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/x120"
        android:layout_marginTop="@dimen/x20"
        android:layout_gravity="center" >

        <TextView
            android:id="@+id/id_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="test"
            android:textSize="@dimen/x50" />

        <ImageView
            android:id="@+id/id_sex"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/id_username"
            android:src="@drawable/v7" />

    </RelativeLayout>
    
    <Button
        android:id="@+id/btn_add_friend"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x100"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x40"
        android:layout_marginTop="@dimen/x20"
        android:text="@string/add_friend"
        android:visibility="gone" />

  <Button
        android:id="@+id/btn_send_msg"
        android:background="@drawable/btn_selector"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x100"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x40"
        android:layout_marginTop="@dimen/x20"
        android:text="@string/send_msg"
        android:visibility="visible" />
  <Button
        android:id="@+id/btn_add_blacklist"
        android:layout_width="match_parent"
        android:background="#FF4500"
        android:layout_height="@dimen/x100"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x40"
        android:layout_marginTop="@dimen/x20"
        android:text="@string/add_blacklist"
        android:visibility="visible" />

</LinearLayout>